add site_domain setting

--- a/racket_stringer/settings/app.env.example
+++ b/racket_stringer/settings/app.env.example
@@ -15,6 +15,7 @@
 # export DB_PASSWORD=""
 # export DB_HOST=""
 # export DB_PORT=""
+# export SITE_DOMAIN=""
 
 
 # For fish shell:
@@ -25,3 +26,4 @@
 # set -x DB_PASSWORD ''
 # set -x DB_HOST ''
 # set -x DB_PORT ''
+# set -x SITE_DOMAIN ''
