--- a/racket_stringer/settings/app.env.example
+++ b/racket_stringer/settings/app.env.example
@@ -16,6 +16,10 @@
 # export DB_HOST=""
 # export DB_PORT=""
 # export SITE_DOMAIN=""
+# export AWS_ACCESS_KEY_ID=""
+# export AWS_SECRET_ACCESS_KEY=""
+# export AWS_STORAGE_BUCKET_NAME=""
+# export AWS_STORAGE_BUCKET_LOCATION=""
 
 
 # For fish shell:
@@ -27,3 +31,7 @@
 # set -x DB_HOST ''
 # set -x DB_PORT ''
 # set -x SITE_DOMAIN ''
+# set -x AWS_ACCESS_KEY_ID ''
+# set -x AWS_SECRET_ACCESS_KEY ''
+# set -x AWS_STORAGE_BUCKET_NAME ''
+# set -x AWS_STORAGE_BUCKET_LOCATION ''
