swap database from postgres to sqlite3 :(

--- a/racket_stringer/settings/app.env.example
+++ b/racket_stringer/settings/app.env.example
@@ -3,11 +3,11 @@
 # Instead, copy this file into a new file named app.env. Note that app.env is ignored in the top-level .gitignore:
 # cp app.env.example app.env
 
-# Then, edit app.env by uncommenting either the bash-compatible or fish section and supplying the environment variables. Source app.env before starting the server:
+# Then, edit app.env by uncommenting the environment variables and supplying their values. Source app.env before starting the server:
 # source app.env
 
+# The DB_* variables are no longer needed with the switch to sqlite3. They are kept here for reference.
 
-# For bash-compatible shells:
 # export SECRET_KEY=""
 # export ALLOWED_HOSTS=""
 # export DB_NAME=""
@@ -15,13 +15,3 @@
 # export DB_PASSWORD=""
 # export DB_HOST=""
 # export DB_PORT=""
-
-
-# For fish shell:
-# set -x SECRET_KEY ''
-# set -x ALLOWED_HOSTS ''
-# set -x DB_NAME ''
-# set -x DB_USER ''
-# set -x DB_PASSWORD ''
-# set -x DB_HOST ''
-# set -x DB_PORT ''
