re-add uwsgi touch-reload

--- a/django_racket_stringer.ini
+++ b/django_racket_stringer.ini
@@ -7,3 +7,4 @@ max-requests=5000
 socket=:8001
 pidfile=/tmp/django_racket_stringer.pid
 daemonize=/var/log/uwsgi/django_racket_stringer.log
+touch-reload=/etc/uwsgi/apps/django_racket_stringer.ini
